--- a/Grial/Eleos3.Droid/Eleos3.Droid.csproj
+++ b/Grial/Eleos3.Droid/Eleos3.Droid.csproj
@@ -81,6 +81,9 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
