--- a/Grial/Eleos3.iOS/Eleos3.iOS.csproj
+++ b/Grial/Eleos3.iOS/Eleos3.iOS.csproj
@@ -128,6 +128,11 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-76x76%402x.png" />
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-83.5x83.5%402x.png" />
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\iTunesArtwork.png" />
+    <ImageAsset Include="Assets.xcassets\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Image.imageset\ic_eye-1.png" />
+    <ImageAsset Include="Assets.xcassets\Image.imageset\ic_eye-2.png" />
+    <ImageAsset Include="Assets.xcassets\Image.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\Image.imageset\ic_eye.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -231,5 +236,7 @@
     <BundleResource Include="Resources\friend_06%402x.png" />
     <BundleResource Include="Resources\user_01.png" />
     <BundleResource Include="Resources\close_icon%403x.png" />
+    <BundleResource Include="Resources\ic_eye_hide.png" />
+    <BundleResource Include="Resources\ic_eye.png" />
   </ItemGroup>
 </Project>
